# frost-ed25519-kit

./: .gitignore  .gitignore.swp  CLAUDE.md  Cargo.toml  README.md  deny.toml  readme.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  THREAT-MODEL.md  x-thread.md
docs/specs/: comprehension-checklist.md  dod-audit.md  kickoff-amendment-1.md  kickoff-brief.md  phase0-spec.md  phase1-spec.md  phase2-spec.md  phase3-spec.md  phase4-spec.md  phase5-spec.md
frost-core/: Cargo.toml
frost-core/examples/: in_process_2of3.rs  solana_compat.rs
frost-core/src/: ciphersuite.rs  dkg.rs  error.rs  group.rs  keygen.rs  lib.rs  secret.rs  sign.rs  verify.rs  vss.rs
frost-core/tests/: adversarial.rs  differential.rs  dkg_adversarial.rs  dkg_differential.rs  dkg_pok_pin.rs  identifiable_abort.rs  identifiers.rs  reconstruction.rs  rfc9591_kat.rs  ros_resistance.rs  zeroization_audit.rs
frost-core/tests/vectors/: rfc9591_ed25519_sha512.json
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/gelement_from_compressed/: basepoint  order8_nonprime  seed-noncanonical-y-p-plus-1
fuzz/corpus/identifier_from_canonical_bytes/: order_L_noncanonical
fuzz/corpus/round2_package_deserialize/: recipient1_share1
fuzz/corpus/signature_from_bytes/: basepoint_z1  identity_zL  seed-noncanonical-r-sign-bit
fuzz/fuzz_targets/: gelement_from_compressed.rs  gscalar_from_canonical_bytes.rs  identifier_from_canonical_bytes.rs  round2_package_deserialize.rs  signature_from_bytes.rs  signing_share_from_canonical_bytes.rs
fuzz/src/: lib.rs
fuzz/tests/: bounded.rs
legacy/: Cargo.toml
legacy/results/: ros_forgery.txt
legacy/src/: lib.rs  oracle.rs  ros.rs
node/: Cargo.toml
node/src/: main.rs
nodeDb/: Cargo.toml  diesel.toml
nodeDb/migrations/2025-09-18-184226_node_schema/: down.sql  up.sql
nodeDb/src/: config.rs  lib.rs  node_models.rs  node_store.rs  schema.rs
nodeDb/src/models/: node.rs
orchestrator/: Cargo.toml
orchestrator/src/: main.rs
orchestrator/src/routes/: routes.rs
store/: Cargo.toml  diesel.toml
store/migrations/2025-09-18-184412_orc_schema/: down.sql  up.sql
store/src/: config.rs  module.rs  schema.rs  store.rs
store/src/models/: orchestrator.rs
