[workspace]
resolver = "3"
# legacy/ is the archived naive scheme — the Phase 3 ROS attack target. It is a
# separate member, NOT a dependency of frost-core (phase1-spec §8).
members = ["frost-core", "legacy"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/umangPokhriyall/frost-ed25519-kit"

# Optimize dependencies (curve25519-dalek, sha2, frost-ed25519) at opt-level 3 even
# in dev/test builds, so the >=10,000-case differential proptest (phase1-spec §7.2)
# runs in reasonable time. Our own crates stay at the profile default (opt-level 0)
# so frost-core remains debuggable. Build-config only; the shipped graph is unchanged.
[profile.dev.package."*"]
opt-level = 3

# Workspace lints. unsafe_code is forbidden crate-wide; frost-core also carries
# #![forbid(unsafe_code)] at the crate root (phase0-spec §2.2).
[workspace.lints.rust]
unsafe_code = "forbid"

# Dependency allowlist — phase0-spec §2.3. Nothing else is permitted in
# frost-core this phase: no tokio/reqwest/diesel/Postgres/solana-*.
[workspace.dependencies]
curve25519-dalek = { version = "4", features = ["zeroize", "rand_core"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
rand_core = "0.6"
subtle = "2"      # constant-time equality / choice
thiserror = "2"   # error derive only; no runtime cost
# phase1-spec §3: the SHA-512 of FROST(Ed25519, SHA-512). Pure compute, no IO,
# no unsafe in our usage — the one ciphersuite-mandated addition to the Phase 0
# shipped graph (approved 2026-06-18). Supersedes the literal "shipped graph
# unchanged" wording of phase1-spec §2 / DoD §8, which predates noticing that
# curve25519-dalek does not bundle or re-export a hash.
sha2 = "0.10"
# dev-dependencies:
rand = "0.8"      # test RNG only
hex = "0.4"       # KAT/test vector decoding only
# phase1-spec §2: differential oracle + harness — DEV-ONLY, never in the shipped
# graph (verified with `cargo tree -e normal`).
frost-ed25519 = "2"
proptest = "1"
serde_json = "1"
