[package]
name = "frost-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sans-IO FROST(Ed25519) core: validated group layer, secret hygiene, VSS, trusted-dealer keygen."
publish = false

[lints]
workspace = true

# phase0-spec §2.3 dependency allowlist — nothing else.
[dependencies]
curve25519-dalek.workspace = true
zeroize.workspace = true
rand_core.workspace = true
subtle.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand.workspace = true
hex.workspace = true
