[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]

poem = "3.1.11"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1"
curve25519-dalek = "4"
uuid = {version = "1.17.0", features = ["serde",  "v4"]}


rand_core = "0.6"
rand = { version = "0.8", features = ["std"] }
hex = "0.4"
anyhow = "1.0"
tracing-subscriber = "0.3"

tokio = {version = "1.45.1", features = ["full"]}

nodeDb = { path = "../nodeDb" }