[package]
name = "nodeDb"
version = "0.1.0"
edition = "2024"

[dependencies]


dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"

diesel = { version = "2.1.4", features = ["postgres", "uuid", "chrono", "serde_json"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
curve25519-dalek = "4"