[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = {version = "1.45.1", features = ["full"]}

# Web framework
poem = "3.1.11"

# Database (Diesel + Postgres)
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"

# Redis
redis = { version = "0.26", features = ["tokio-comp"] }

# Serialization
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

k256 = "0.13"
rand_core = "0.6"
hex = "0.4"

# UUIDs for wallet/session ids
uuid = {version = "1.17.0", features = ["serde",  "v4"]}

# Crypto (placeholder, add frost/curve crates later)
sha2 = "0.10"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }


[dev-dependencies]
tokio = {version = "1.45.1", features = ["full"]}

