[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = {version = "1.45.1", features = ["full"]}

# Web framework
poem = "3.1.11"

# Database (Diesel + Postgres)
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"

# Redis
redis = { version = "0.26", features = ["tokio-comp"] }

# Serialization
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

curve25519-dalek = "4"
bs58 = "0.5.1"

rand_core = "0.6"
rand = { version = "0.8", features = ["std"] }
hex = "0.4"

# UUIDs for wallet/session ids
uuid = {version = "1.17.0", features = ["serde",  "v4"]}

# Crypto (placeholder, add frost/curve crates later)
sha2 = "0.10"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

store = { path = "../store" }

solana-sdk = "2.2.19" # match your Solana CLI version
solana-transaction-status = "2.2.19"
solana-client = "2.2.19"



bincode = "1.3"

base64 = "0.21"
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"


[dev-dependencies]
tokio = {version = "1.45.1", features = ["full"]}

